fixed gap between photo and text, added a new id to my img div and gave it the same width as the photo. just added first paragraph for bio

--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
-.responsive {
+.img-fluid {
     width: 100%;
-    max-width: 400px;
+    max-width: 300px;
     height: auto;
+}
+
+#wrapper-image{
+    width: 100%;
+    max-width: 300px
+}
+
+.div {
+    word-wrap: break-word;
+}
+
+.style {
+    background-image: url("my-image.png");
+  background-size: cover; 
 }
